--- a/styles/globals.css
+++ b/styles/globals.css
@@ -100,18 +100,18 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #888;
+  background-color: #888888c4;
   border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #555;
+  background-color: #888888c4;
 }
 
 ::-webkit-scrollbar-thumb:active {
-  background-color: #333;
+  background-color: #888888c4;
 }
