--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,64 +19,64 @@
 
 @font-face {
   font-family: 'YekanBakh';
-  src: url('./fonts/YekanBakh-Regular.woff2') format('woff2'),
-       url('./fonts/YekanBakh-Regular.woff') format('woff');
+  src: url('/assets/fonts/YekanBakh-Regular.woff2') format('woff2'),
+       url('/assets/fonts/YekanBakh-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'YekanBakh';
-  src: url('./fonts/YekanBakh-Bold.woff2') format('woff2'),
-       url('./fonts/YekanBakh-Bold.woff') format('woff');
+  src: url('/assets/fonts/YekanBakh-Bold.woff2') format('woff2'),
+       url('/assets/fonts/YekanBakh-Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'YekanBakh';
-  src: url('./fonts/YekanBakh-Light.woff2') format('woff2'),
-       url('./fonts/YekanBakh-Light.woff') format('woff');
+  src: url('/assets/fonts/YekanBakh-Light.woff2') format('woff2'),
+       url('/assets/fonts/YekanBakh-Light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'YekanBakh';
-  src: url('./fonts/YekanBakh-Black.woff2') format('woff2'),
-       url('./fonts/YekanBakh-Black.woff') format('woff');
+  src: url('/assets/fonts/YekanBakh-Black.woff2') format('woff2'),
+       url('/assets/fonts/YekanBakh-Black.woff') format('woff');
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'YekanBakh';
-  src: url('./fonts/YekanBakh-ExtraBold.woff2') format('woff2'),
-       url('./fonts/YekanBakh-ExtraBold.woff') format('woff');
+  src: url('/assets/fonts/YekanBakh-ExtraBold.woff2') format('woff2'),
+       url('/assets/fonts/YekanBakh-ExtraBold.woff') format('woff');
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'YekanBakh';
-  src: url('./fonts/YekanBakh-SemiBold.woff2') format('woff2'),
-       url('./fonts/YekanBakh-SemiBold.woff') format('woff');
+  src: url('/assets/assets/fonts/YekanBakh-SemiBold.woff2') format('woff2'),
+       url('/assets/assets/fonts/YekanBakh-SemiBold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'YekanBakh';
-  src: url('./fonts/YekanBakh-Thin.woff2') format('woff2'),
-       url('./fonts/YekanBakh-Thin.woff') format('woff');
+  src: url('/assets/fonts/YekanBakh-Thin.woff2') format('woff2'),
+       url('/assets/fonts/YekanBakh-Thin.woff') format('woff');
   font-weight: 100;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'YekanBakh';
-  src: url('./fonts/YekanBakh-ExtraBlack.woff2') format('woff2'),
-       url('./fonts/YekanBakh-ExtraBlack.woff') format('woff');
+  src: url('/assets/fonts/YekanBakh-ExtraBlack.woff2') format('woff2'),
+       url('/assets/fonts/YekanBakh-ExtraBlack.woff') format('woff');
   font-weight: 950;
   font-style: normal;
 }
