--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,26 +3,41 @@
 @tailwind utilities;
 
 :root {
-  --color-primary: 255 255 255; /* Light mode primary: FFFFFF */
-  --color-secondary: 247 248 249; /* Light mode secondary: F7F8F9 */
-  --color-accent: 59 130 246; /* Light mode accent: 3B82F6 */
-  --color-text: 100 116 139; /* Updated to a blue-gray shade (#64748B) */
+  --color-primary: 255 255 255;
+  /* Light mode primary: FFFFFF */
+  --color-secondary: 247 248 249;
+  /* Light mode secondary: F7F8F9 */
+  --color-accent: 59 130 246;
+  /* Light mode accent: 3B82F6 */
+  --color-text: 100 116 139;
+  /* Updated to a blue-gray shade (#64748B) */
 }
 
 /* Dark mode variables controlled by the 'dark' class */
 .dark {
-  --color-primary: 14 35 56; /* Dark mode primary: 0E2338 */
-  --color-secondary: 22 47 72; /* Dark mode secondary: 162F48 */
-  --color-accent: 81 182 255; /* Dark mode accent: 51B6FF */
-  --color-text: 255 255 255; /* White text for dark mode */
+  --color-primary: 14 35 56;
+  /* Dark mode primary: 0E2338 */
+  --color-secondary: 22 47 72;
+  /* Dark mode secondary: 162F48 */
+  --color-accent: 81 182 255;
+  /* Dark mode accent: 51B6FF */
+  --color-text: 255 255 255;
+  /* White text for dark mode */
 }
 
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 100%
+}
 
 
 @font-face {
   font-family: 'YekanBakh';
   src: url('/assets/fonts/YekanBakh-Regular.woff2') format('woff2'),
-       url('/assets/fonts/YekanBakh-Regular.woff') format('woff');
+    url('/assets/fonts/YekanBakh-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
@@ -30,7 +45,7 @@
 @font-face {
   font-family: 'YekanBakh';
   src: url('/assets/fonts/YekanBakh-Bold.woff2') format('woff2'),
-       url('/assets/fonts/YekanBakh-Bold.woff') format('woff');
+    url('/assets/fonts/YekanBakh-Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
 }
@@ -38,7 +53,7 @@
 @font-face {
   font-family: 'YekanBakh';
   src: url('/assets/fonts/YekanBakh-Light.woff2') format('woff2'),
-       url('/assets/fonts/YekanBakh-Light.woff') format('woff');
+    url('/assets/fonts/YekanBakh-Light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
 }
@@ -46,7 +61,7 @@
 @font-face {
   font-family: 'YekanBakh';
   src: url('/assets/fonts/YekanBakh-Black.woff2') format('woff2'),
-       url('/assets/fonts/YekanBakh-Black.woff') format('woff');
+    url('/assets/fonts/YekanBakh-Black.woff') format('woff');
   font-weight: 900;
   font-style: normal;
 }
@@ -54,7 +69,7 @@
 @font-face {
   font-family: 'YekanBakh';
   src: url('/assets/fonts/YekanBakh-ExtraBold.woff2') format('woff2'),
-       url('/assets/fonts/YekanBakh-ExtraBold.woff') format('woff');
+    url('/assets/fonts/YekanBakh-ExtraBold.woff') format('woff');
   font-weight: 800;
   font-style: normal;
 }
@@ -62,7 +77,7 @@
 @font-face {
   font-family: 'YekanBakh';
   src: url('/assets/assets/fonts/YekanBakh-SemiBold.woff2') format('woff2'),
-       url('/assets/assets/fonts/YekanBakh-SemiBold.woff') format('woff');
+    url('/assets/assets/fonts/YekanBakh-SemiBold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
 }
@@ -70,7 +85,7 @@
 @font-face {
   font-family: 'YekanBakh';
   src: url('/assets/fonts/YekanBakh-Thin.woff2') format('woff2'),
-       url('/assets/fonts/YekanBakh-Thin.woff') format('woff');
+    url('/assets/fonts/YekanBakh-Thin.woff') format('woff');
   font-weight: 100;
   font-style: normal;
 }
@@ -78,7 +93,7 @@
 @font-face {
   font-family: 'YekanBakh';
   src: url('/assets/fonts/YekanBakh-ExtraBlack.woff2') format('woff2'),
-       url('/assets/fonts/YekanBakh-ExtraBlack.woff') format('woff');
+    url('/assets/fonts/YekanBakh-ExtraBlack.woff') format('woff');
   font-weight: 950;
   font-style: normal;
 }
@@ -87,6 +102,7 @@
   .rtl {
     direction: rtl;
   }
+
   .ltr {
     direction: ltr;
   }
