--- a/styles/globals.css
+++ b/styles/globals.css
@@ -129,3 +129,21 @@ body {
 ::-webkit-scrollbar-thumb:active {
   background-color: #888888c4;
 }
+
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* مخفی کردن نوار اسکرول در مرورگرهای Webkit (مثل Chrome, Safari) */
+}
+
+.hide-scrollbar::-webkit-scrollbar-thumb {
+  background-color: transparent; /* مخفی کردن Thumb نوار اسکرول */
+}
+
+.hide-scrollbar::-webkit-scrollbar-track {
+  background: transparent; /* مخفی کردن Track نوار اسکرول */
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none; /* برای مرورگرهای IE و Edge */
+  scrollbar-width: none; /* برای Firefox */
+}
