--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,17 +5,17 @@
 :root {
   --color-primary: 239 244 251;
   --color-secondary: 255 255 255;
-  --color-accent: 81 79 182;
+  --color-accent: 60 146 203;
   --color-text: 51 61 95;
 }
 
 .dark {
   --color-primary: 14 35 56;
   --color-secondary: 22 47 72;
-  --color-accent: 81 79 182;
+  --color-accent: 60 146 203;
   --color-text: 255 255 255;
 }
-
+/* 3c92cb */
 .container {
   margin-left: auto;
   margin-right: auto;
