style(ui): Unused codes deleted

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@
   --color-secondary: 255 255 255;
   --color-tertiary: 81 79 182; 
   --color-accent: 59 130 245; 
-  --color-text: 43, 55, 81; 
+  --color-text: 43 55 81; 
 }
 
 
